<resources>
    <string name="app_name">ShoppingApp</string>
    <string name="your_email">Your Email</string>
    <string name="password">Password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="login_button">login_button</string>
    <string name="facebook_img">facebook_img</string>
    <string name="gmail_img">gmail_img</string>
    <string name="or">OR</string>
    <string name="reset">Forgot your password?</string>
    <string name="explore">explore</string>
    <string name="profile">profile</string>
    <string name="cart">cart</string>
    <string name="dont_have_an_account_sign_up">Don\'t have an account? sign up</string>
    <string name="Viewandedit">view and edit profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart_btn">Cart</string>
    <string name="profile_btn">Profile</string>
</resources>